src/pages/homePage/homePage.css
.homepage__title{
    text-align: center;
    font-size: calc(1.95*var(--index));
    font-weight: 700;
    margin: calc(2*var(--index));
    margin-bottom: calc(2*var(--index));
}

.homePage__wrapper{
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: center;
    justify-content: start;
    padding-bottom: calc(2*var(--index));
    min-height: 40vh;
}

.homePage__container{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 100%;
}


.subContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    word-break: break-word;
    text-align: center;
    padding: calc(2.8*var(--index));
    row-gap: 1.4vh;
    max-width: 30vw;
    padding-top: calc(3.2*var(--index));
    padding-bottom: calc(3.2*var(--index));
}

.subContainer__title{
    font-weight: 700;
    font-size: calc(1.5*var(--index));
    word-break: break-word;
    letter-spacing: 0.05em;
}

.subContainer__caption{
    font-weight: 400;
    font-size: calc(0.95*var(--index));
    word-break: break-word;
}

.svgshka{
    width: calc(4.5*var(--index));
}

.caption_subtitle{
    text-align: center;
    font-weight: 500;
    font-size: calc(0.95*var(--index));
    margin-bottom: 1.8vh;
}


.caption_subtitle{
    text-align: center;
    font-weight: 500;
    font-size: calc(0.95*var(--index));
    margin-bottom: 1.4vh;
}

.action{
    margin-bottom: 4vh;
}

@media(max-width: 840px){
    .homepage__title{
        text-align: center;
        font-size: calc(2.5*var(--index));
        font-weight: 700;
        letter-spacing: 105%;
        margin: calc(2*var(--index));
        margin-bottom: 3vh;
        flex-wrap: wrap;
        margin-bottom: calc(2*var(--index));
    }

    .homePage__container{
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: start;
        width: 100%;
    }

    .firstSubContainer{
        margin-top: calc(2.5*var(--index));
    }

    .subContainer{
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        word-break: break-word;
        text-align: center;
        padding: calc(2.8*var(--index));
        row-gap: calc(0.25*var(--index));
        max-width: 70vw;
        padding-top: calc(2*var(--index));
        padding-bottom: calc(2*var(--index));
    }
    
    .subContainer__title{
        font-weight: 700;
        font-size: calc(2.5*var(--index));
        word-break: break-word;
    
    }
    
    .subContainer__caption{
        font-weight: 400;
        font-size: calc(1.25*var(--index));
        word-break: break-word;
    }
    
    .svgshka{
        width: calc(5.5*var(--index));
    }
    
    .caption_subtitle{
        text-align: center;
        font-weight: 400;
        font-size: calc(1.25*var(--index));
        letter-spacing: 105%;
        margin-bottom: calc(0.25*var(--index));
        padding-top: calc(2*var(--index));
    }
    
    .action{
        margin-bottom: calc(2*var(--index));
    }
}

